test/errors/assign_global_bad_type.luv
# RET: 1
# ERR: {self}:8:13:    myvar = "hi!"
# ERR: {ssss}                  ^ error: Cannot assign type str to type i32.
myvar = 1

def int main():
    global myvar
    myvar = "hi!"
    return 0
